--- a/items.html
+++ b/items.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Hello world!</title>
+    <title>Go look up the Items!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,13 +25,13 @@
     <script>
        $(document).ready(function(){
          $('#B1').on('click',function(){
-           $('#airtable-embed2').show();
+           $('#airtable-embed2').toggle();
          });
        });
 
        $(document).ready(function(){
          $('#B2').on('click',function(){
-           $('#airtable-embed3').show();
+           $('#airtable-embed3').toggle();
          });
        });
     </script>
@@ -44,7 +44,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Hello again</a>
+        <a class="navbar-brand" href="index.html">Hello trendsetter!</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('img/items-bg.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
