--- a/json-datatable.html
+++ b/json-datatable.html
@@ -39,17 +39,19 @@
                 {     "data"     :     "designation"}
            ]
       });
-      var chart = c3.generate({
-          data: {
-              columns: [
-                ['Lulu', 50,4,3,2],
-                ['Olaf', 50,6,8,1]
-              ],
-              type : 'bar'
-          },
-          bar: {
-              title: "Dogs love:",
-          }
-       });
  });
  </script>
+<script>
+ var chart = c3.generate({
+     data: {
+         columns: [
+           ['Lulu', 50,4,3,2],
+           ['Olaf', 50,6,8,1]
+         ],
+         type : 'bar'
+     },
+     bar: {
+         title: "Dogs love:",
+     }
+  });
+  </script>
