--- a/items.html
+++ b/items.html
@@ -22,22 +22,8 @@
     <link href="css/clean-blog.min.css" rel="stylesheet">
     <!-- add some JScode-->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-    <script>
-       $(document).ready(function(){
-         $('#B1').on('click',function(){
-           $('#airtable-embed2').toggle();
-         });
-       });
-
-       $(document).ready(function(){
-         $('#B2').on('click',function(){
-           $('#airtable-embed3').toggle();
-         });
-       });
-    </script>
 
   </head>
-
 
   <body>
 
@@ -99,9 +85,11 @@
                     <button id="B2" type="button" class="btn btn-primary">Sort by price</button>
                     </br>
                     <br>
-                    <iframe id="airtable-embed2" style="display: none" src="https://airtable.com/embed/shrMyWd1VUzmo0jVn?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>                  </br>
-                    <iframe id="airtable-embed3" style="display: none" src="https://airtable.com/embed/shrSfRTBNbhnvRApX?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-                  </br>
+                    <div class="table-responsive">
+                      <table id="table1" width="100%" class="table table-bordered"></table>
+                    </div>
+                  </div>
+                </br>
              </div>
            </div>
           </div>
@@ -151,6 +139,8 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/clean-blog.min.js"></script>
+    <script src="popitems.js"></script>
+
 
   </body>
 
