--- a/stores.html
+++ b/stores.html
@@ -77,11 +77,15 @@
           <h1 class="mb-3">Find where you can get your items and check the opening time !</h1>
           <br>
           <button id="B3" type="button" class="btn btn-success">View as list</button>
+          <button id="B1" type="button" class="btn btn-danger">view as grid</button>
           </br>
           <br>
          <iframe id="airtable-embed3" src="https://airtable.com/embed/shrAWgjsh91KY6rVM?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
          <iframe id="airtable-embed4" style="display: none" src="https://airtable.com/embed/shrpBXHnj5qVvPeSG?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
        </br>
+       <div class="table-responsive">
+         <table id="example2" width="100%" class="table table-bordered"></table>
+       </div>
         </div>
       </div>
     </div>
@@ -120,6 +124,8 @@
    });
 
 </script>
+<script src="popitems.js"></script>
+
   <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
