--- a/demo1005/mao.html
+++ b/demo1005/mao.html
@@ -3,27 +3,37 @@
 <head>
     <title>Simple Leaflet Map</title>
     <meta charset="utf-8" />
-    <link
-        rel="stylesheet"
-        href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
-    />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+        integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+        crossorigin=""/>
+        <!-- Make sure you put this AFTER Leaflet's CSS -->
+        <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+        integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+        crossorigin=""></script>
 </head>
 <body>
-    <div id="map" style="width: 600px; height: 400px"></div>
+   <div id="mapid" style="width: 800px; height: 440px; border: 1px solid #AAA;"></div>
+   <script>
+      var mapboxTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a>', maxZoom: 18,})
+      var map = L.map('mapid')
+           .addLayer(mapboxTiles)
+           .setView([23.4, 113.5], 9);
 
-    <script
-        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
-    </script>
+      var marker = L.marker([23.133333, 113.266667]).addTo(map);
+      marker.bindPopup('<a href="https://en.wikipedia.org/wiki/Guangzhou" target="_blank">Guangzhou</a>').openPopup();
 
-    <script>
-        var map = L.map('map').setView([-41.2858, 174.78682], 14);
-        mapLink =
-            '<a href="http://openstreetmap.org">OpenStreetMap</a>';
-        L.tileLayer(
-            'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: 'Map data &copy; ' + mapLink,
-            maxZoom: 18,
-            }).addTo(map);
-    </script>
+      var marker = L.marker([23.016667, 113.116667], {draggable: true})
+      .bindPopup( '<a href="https://en.wikipedia.org/wiki/Foshan" target="_blank">Foshan</a>')
+      .addTo(map);
+
+      var marker = L.marker([23.033333, 113.716667], {draggable: true})
+      .bindPopup( '<a href="https://en.wikipedia.org/wiki/Dongguan" target="_blank">Dongguan</a>')
+      .addTo(map);
+
+      var marker = L.marker([23.682, 113.056], {draggable: true})
+      .bindPopup( '<a href="https://en.wikipedia.org/wiki/Qingyuan" target="_blank">Qingyuan</a>')
+      .addTo(map);
+
+   </script>
 </body>
 </html>
