--- a/stores.html
+++ b/stores.html
@@ -77,7 +77,7 @@
           <h1 class="mb-3">Find where you can get your items and check the opening time !</h1>
           <br>
           <button id="B3" type="button" class="btn btn-success">View as list</button>
-          <button id="B1" type="button" class="btn btn-danger">view as grid</button>
+          <button id="B1" type="button" class="btn btn-danger">numbers of items</button>
           </br>
           <br>
          <iframe id="airtable-embed3" src="https://airtable.com/embed/shrAWgjsh91KY6rVM?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
