--- a/brands.html
+++ b/brands.html
@@ -109,6 +109,14 @@
                              </p>
                         <iframe class="airtable-embed" src="https://airtable.com/embed/shrybRPv7UzAmYTN9?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
+                        <br>
+                        <button id="B4" type="button" class="btn btn-success">average selling price</button>
+                        </br>
+                        <br>
+                        <div class="table-responsive">
+                          <table id="example3" width="50%" class="table table-bordered"></table>
+                        </div>
+
         </div>
       </div>
     </div>
@@ -138,6 +146,9 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.css" rel="stylesheet" type="text/css">
   <script src="popitems.js"></script>
   <script>
    $(document).ready(function(){
