--- a/index.html
+++ b/index.html
@@ -70,16 +70,28 @@
     </div>
   </div>
   <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
-  <div class="text-center my-0 py-3">
+  <div class="py-3 text-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h2 class="mb-3">Find your <mark>favorable items</mark> with the most worthy price!</h1>
-          <h2 class="mb-3">Find <mark>where</mark> you can get your items and check the opening time !</h1>
-          <h2 class="mb-3">Learn the <mark>story</mark> behind the brands !</h1>
-          <br>
-          <a class="btn btn-primary" href="landing.html">Look for hottest items</a>
-          <br>
+        <div class="col-md-12 text-center">
+          <h1>Get Everything you want in here!</h1>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-4 p-4"> <i class="d-block fa fa-3x mb-2 text-muted fa-hand-peace-o"></i>
+          <h4> <b>Hottest Items</b></h4>
+          <p>We collect all the hottest items from different famous stores in HK. And we have also compared the prices of the same item in different stores, so that you can know where to buy your favorite clothes for less money.</p>
+          <a class="btn btn-outline-dark" href="landing.html">CHECK THE ITEMS</a>
+        </div>
+        <div class="col-md-4 col-6 p-4"> <i class="d-block fa fa-stop-circle-o fa-3x mb-2 text-muted"></i>
+          <h4> <b>Brands</b></h4>
+          <p>Before buying a cool item, maybe you want to learn the story behind the brands. There are reasons why are these brands are so famous and popular around the world.</p>
+          <a class="btn btn-outline-dark" href="brands.html">LEARN THE BRANDS</a>
+        </div>
+        <div class="col-md-4 col-6 p-4"> <i class="d-block fa fa-3x mb-2 text-muted fa-cart-arrow-down"></i>
+          <h4> <b>Stores</b></h4>
+          <p>There are many stores in HK that you can choose. Different stores have different prices.<br>Find where you can get your items and check the opening time in this page!</p>
+          <a class="btn btn-outline-dark" href="stores.html">FIND THEM IN THE MAP</a>
         </div>
       </div>
     </div>
