--- a/brands.html
+++ b/brands.html
@@ -116,6 +116,8 @@
                         <div class="table-responsive">
                           <table id="example3" width="50%" class="table table-bordered"></table>
                         </div>
+                        <div id=chart>
+                        </div>
 
         </div>
       </div>
