--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     ga('require', 'GTM-PJFD8HV');
-    //gtag('config', 'UA-129094912-1');
+    gtag('config', 'UA-129094912-1');
     gtag('config','GA_TRACKING_ID',{'optimize_id':'GTM-PJFD8HV'});
   </script>
 
