--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     gtag('js', new Date());
     ga('require', 'GTM-PJFD8HV');
     gtag('config', 'UA-129094912-1');
-    gtag('config','GA_TRACKING_ID',{'optimize_id':'GTM-PJFD8HV'});
+    gtag('config','UA-129094912-1',{'optimize_id':'GTM-PJFD8HV'});
   </script>
 
 
