--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-566NHGN');</script>
   <!-- End Google Tag Manager -->
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <style>.async-hide { opacity: 0 !important} </style>
+  <style>
+    .async-hide {
+      opacity: 0 !important
+    }
+  </style>
   <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
   h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
   (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
   })(window,document.documentElement,'async-hide','dataLayer',4000,
   {'GTM-PJFD8HV':true});</script>
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
+  <script> window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config','UA-129094912-1',{'optimize_id':'GTM-PJFD8HV'});
     ga('require', 'GTM-PJFD8HV');
-    gtag('config', 'UA-129094912-1');
+    //gtag('config', 'UA-129094912-1');
+    gtag('config','UA-129094912-1',{'optimize_id':'GTM-PJFD8HV'});
   </script>
-
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
@@ -43,12 +42,9 @@
 </head>
 
 <body class="">
-
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-
   <nav class="navbar navbar-expand-md navbar-light bg-warning">
     <div class="container">
       <a class="navbar-brand" href="#"><i class="fa d-inline fa-lg fa-bullseye"></i></a>
@@ -56,23 +52,26 @@
         <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse text-center justify-content-between" id="navbar2SupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="index.html">Home</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="landing.html">Items</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="brands.html">Brands</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="stores.html">Stores</a>
+          </li>
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
+            <a class="nav-link mx-2" href="contact.html">CONTACT US</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="py-5">
+  <div class="py-3">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -80,20 +79,20 @@
             <div class="carousel-inner">
               <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/home-bg.jpg">
                 <div class="carousel-caption">
-                  <h3 class="display-4 bg-primary shadow text-dark"><b>Hottest Items</b></h3>
-                  <p class="text-danger"><b>Find your coolest outfits.</b></p>
+                  <h3 class="display-4 shadow text-dark bg-light"><b>Hottest Items</b></h3>
+                  <p class="text-warning"><b>Find your coolest outfits.</b></p>
                 </div>
               </div>
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/about-bg.jpg">
                 <div class="carousel-caption">
                   <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Stores</b></h5>
-                  <p class="text-danger"><b>Go find your stores.</b></p>
+                  <p class="text-warning"><b>Go find your stores.</b></p>
                 </div>
               </div>
               <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/contact-bg.jpg">
                 <div class="carousel-caption">
                   <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Brands</b></h5>
-                  <p class="text-danger"><b>Buy before learning.</b></p>
+                  <p class="text-warning"><b>Buy before learning.</b></p>
                 </div>
               </div>
             </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
@@ -112,17 +111,17 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-4 p-4"> <i class="d-block fa fa-3x mb-2 text-muted fa-hand-peace-o"></i>
-          <h4> <b>Hottest Items</b></h4>
+          <h4 class="bg-warning"> <b>Hottest Items</b></h4>
           <p>We collect all the hottest items from different famous stores in HK. And we have also compared the prices of the same item in different stores, so that you can know where to buy your favorite clothes for less money.</p>
           <a class="btn btn-outline-dark" href="landing.html">CHECK THE ITEMS</a>
         </div>
         <div class="col-md-4 col-6 p-4"> <i class="d-block fa fa-stop-circle-o fa-3x mb-2 text-muted"></i>
-          <h4> <b>Brands</b></h4>
+          <h4 class="bg-warning"> <b>Brands</b></h4>
           <p>Before buying a cool item, maybe you want to learn the story behind the brands. There are reasons why are these brands are so famous and popular around the world.</p>
           <a class="btn btn-outline-dark" href="brands.html">LEARN THE BRANDS</a>
         </div>
         <div class="col-md-4 col-6 p-4"> <i class="d-block fa fa-3x mb-2 text-muted fa-cart-arrow-down"></i>
-          <h4> <b>Stores</b></h4>
+          <h4 class="bg-warning"> <b>Stores</b></h4>
           <p>There are many stores in HK that you can choose. Different stores have different prices.<br>Find where you can get your items and check the opening time in this page!</p>
           <a class="btn btn-outline-dark" href="stores.html">FIND THEM IN THE MAP</a>
         </div>
@@ -139,7 +138,7 @@
     <div class="container">
       <div class="row d-flex justify-content-between">
         <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">Copyright - Guo Baoyi</p>
+          <p class="mb-0 text-dark" contenteditable="true">Contact : +852 64492826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Copyright - Guo Baoyi</p>
         </div>
         <div class="col-lg-4 col-md-6">
           <p class="mb-0 text-dark">2018 - 11 - 04</p>
@@ -154,6 +153,7 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
