--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,29 @@
   })(window,document,'script','dataLayer','GTM-566NHGN');</script>
   <!-- End Google Tag Manager -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <style>
+    .async-hide {
+      opacity: 0 !important
+    }
+  </style>
+  <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
+  h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
+  (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
+  })(window,document.documentElement,'async-hide','dataLayer',4000,
+  {'GTM-PJFD8HV':true});</script>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
   <script> window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
-    gtag('config', 'UA-129094912-1');
+    ga('require', 'GTM-PJFD8HV');
+    //gtag('config', 'UA-129094912-1');
+    gtag('config','UA-129094912-1',{'optimize_id':'GTM-PJFD8HV'});
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Go look up the Brands!</title>
+  <title>Hey trendsetter!!</title>
   <meta name="description" content="Wireframe design of a landing page by Pingendo">
   <meta name="keywords" content="Pingendo bootstrap example template wireframe landing">
   <meta name="author" content="Pingendo">
@@ -64,28 +75,80 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <iframe src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1BW5HJDN8oM7gLM3wlAdRFuPyUfKhxmwbKAMRtn3iN-M&amp;font=Default&amp;lang=en&amp;initial_zoom=2&amp;height=650" width="100%" height="650" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0"></iframe>
+          <div class="carousel slide" data-ride="carousel" id="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/home-bg.jpg">
+                <div class="carousel-caption">
+                  <h3 class="display-4 shadow text-dark bg-light"><b>Hottest Items</b></h3>
+                  <p class="text-warning"><b>Find your coolest outfits.</b></p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/about-bg.jpg">
+                <div class="carousel-caption">
+                  <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Stores</b></h5>
+                  <p class="text-warning"><b>Go find your stores.</b></p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/contact-bg.jpg">
+                <div class="carousel-caption">
+                  <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Brands</b></h5>
+                  <p class="text-warning"><b>Buy before learning.</b></p>
+                </div>
+              </div>
+            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
-  <div class="text-center my-0 py-3">
+  <div class="py-2">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h1 class="mb-3"><b>Learn before you buy it</b></h1>
-          <br>
-            <iframe class="airtable-embed" src="https://airtable.com/embed/shrybRPv7UzAmYTN9?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="70%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-          <br>
-          <div class="row"></div><button id="B4" type="button" class="btn btn-success" contenteditable="true"><b>Average Selling Price</b></button>
-          <br>
-          <br>
-          <div class="table-responsive">
-            <table id="example3" style="width:50%" class="table table-bordered"></table>
-          </div>
-          <div id="chart">
-          </div>
+        <div class="col-md-12 text-center">
+          <h1 class="text-dark">Feel free to contact us !</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center py-2">
+    <div class="container">
+      <div class="row">
+        <div class="mx-auto col-md-7">
+          <hr>
+          <p>The website is still in building process...<br>
+            Please leave your comment and contact below if you're free. What you feel and think means a lot to us!
+            <br>Let's make the page better!</p>
+          <hr>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-3 text-center">
+    <div class="container">
+      <div class="row">
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-6 p-4 col-md-6">
+          <form id="c_form-h" class="">
+            <div class="form-group row"> <label for="inputmailh" class="col-2 col-form-label">Name</label>
+              <div class="col-10">
+                <input type="email" class="form-control" id="inputmailh" placeholder="Name"> </div>
+            </div>
+            <div class="form-group row"> <label for="inputpasswordh" class="col-2 col-form-label">Age</label>
+              <div class="col-10">
+                <input type="password" class="form-control" id="inputpasswordh" placeholder="Age"> </div>
+            </div>
+            <div class="form-group row"> <label for="inputmailh" class="col-2 col-form-label">E-mail</label>
+              <div class="col-10">
+                <input type="email" class="form-control" id="inputmailh" placeholder="mail@example.com"> </div>
+            </div>
+            <div class="form-group row"> <label for="inputpasswordh" class="col-2 col-form-label">Feedback</label>
+              <div class="col-10">
+                <input type="password" class="form-control" id="inputpasswordh" placeholder="Feedback"> </div>
+            </div>
+          </form>
+          <button type="submit" class="btn btn-warning" contenteditable="true"><b>Submit</b></button>
         </div>
       </div>
     </div>
@@ -100,7 +163,7 @@
     <div class="container">
       <div class="row d-flex justify-content-between">
         <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">Contact : +852 6449 2826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Copyright - Guo Baoyi</p>
+          <p class="mb-0 text-dark" contenteditable="true">Contact : +852 64492826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Copyright - Guo Baoyi</p>
         </div>
         <div class="col-lg-4 col-md-6">
           <p class="mb-0 text-dark">2018 - 11 - 04</p>
@@ -115,37 +178,6 @@
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.css" rel="stylesheet" type="text/css">
-  <script src="popitems.js"></script>
-  <script>
-    $(document).ready(function() {
-      $('#a1').on('click', function() {
-        $('#p1').show();
-      });
-    });
-    $(document).ready(function() {
-      $('#a2').on('click', function() {
-        $('#p2').show();
-      });
-    });
-    $(document).ready(function() {
-      $('#a3').on('click', function() {
-        $('#p3').show();
-      });
-    });
-    $(document).ready(function() {
-      $('#a4').on('click', function() {
-        $('#p4').show();
-      });
-    });
-    $(document).ready(function() {
-      $('#a5').on('click', function() {
-        $('#p5').show();
-      });
-    });
-  </script>
   <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
