--- a/landing.html
+++ b/landing.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -10,17 +9,14 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-566NHGN');</script>
   <!-- End Google Tag Manager -->
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
+  <script> window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-129094912-1');
   </script>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
@@ -35,12 +31,9 @@
 </head>
 
 <body class="">
-
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-
   <nav class="navbar navbar-expand-md navbar-light bg-warning">
     <div class="container">
       <a class="navbar-brand" href="#"><i class="fa d-inline fa-lg fa-bullseye"></i></a>
@@ -48,47 +41,179 @@
         <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse text-center justify-content-between" id="navbar2SupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="index.html">Home</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="landing.html">Items</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="brands.html">Brands</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="stores.html">Stores</a>
+          </li>
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
+            <a class="nav-link mx-2" href="contact.html">CONTACT US</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="py-5">
+  <div class="py-3">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/11111.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/22222.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/33333.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/44444.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/55555.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/66666.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/77777.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/88888.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/99999.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/101010.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/111111.png"></div>
+        <div class="col-md-1"><img class="img-fluid d-block" src="img/RI/121212.png"></div>
+      </div>
+    </div>
+  </div>
+  <div class="py-0" style="">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <div class="carousel slide" data-ride="carousel" id="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/items-bg.jpg">
-                <div class="carousel-caption">
-                  <h3 class="display-4 bg-primary shadow text-dark"><b>Hottest Items</b></h3>
-                  <p class="text-danger"><b>Find your coolest outfits.</b></p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/stores-bg.jpg">
-                <div class="carousel-caption">
-                  <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Stores</b></h5>
-                  <p class="text-danger"><b>Go find your stores.</b></p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/brands-bg.jpg">
-                <div class="carousel-caption">
-                  <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Brands</b></h5>
-                  <p class="text-danger"><b>Buy before learning.</b></p>
-                </div>
-              </div>
-            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
+        <div class="col-md-12 text-center">
+          <h3 class="text-warning shadow-none"><u><b>Most Hottest</b></u></h3>
+        </div>
+      </div>
+      <div class="row justify-content-center px-5">
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/1.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#1</b> HKD$1081</p>
+              <p class="mb-0">Supreme Comme des Garcons SHIRT Split Box Logo Tee White</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/2.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#2</b> HKD$1699</p>
+              <p class="mb-0">Supreme The Killer Trust Tee Black</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/4.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#3</b> HKD$1400</p>
+              <p class="mb-0">Supreme Mona Lisa Tee Black</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/3.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#4</b> HKD$1369</p>
+              <p class="mb-0">Supreme The North Face Mountain Tee</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h3 class="text-warning"><u><b>Cheapest Supreme</b></u></h3>
+        </div>
+      </div>
+      <div class="row justify-content-center px-5">
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/11.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#1</b> HKD$549</p>
+              <p class="mb-0">Supreme Tentacles Tee Black</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/33.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#2</b> HKD$782</p>
+              <p class="mb-0">Supreme Ganesha Tee Light Pink</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/22.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#3</b> HKD$802</p>
+              <p class="mb-0">Supreme Madonna Tee Red</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/44.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#4</b> HKD$832</p>
+              <p class="mb-0">Supreme SS Pocket Tee</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h3 class="text-warning"><u><b>Most Collectable</b></u></h3>
+        </div>
+      </div>
+      <div class="row justify-content-center px-5">
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/01.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#1</b> HKD$8999</p>
+              <p class="mb-0">Supreme 20th Anniversary Box Logo Tee Grey</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/02.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#2</b> HKD$7017</p>
+              <p class="mb-0">Supreme Undercover Bear Tee Black</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/03.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#3</b> HKD$6098</p>
+              <p class="mb-0">Supreme Undercover Bear Tee Black</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-3 p-3">
+          <div class="row">
+            <div class="col-3 p-0"> <img class="img-fluid d-block" src="img/RI/04.png"> </div>
+            <div class="col-9">
+              <p class="lead mb-1"> <b>#4</b> HKD$5417</p>
+              <p class="mb-0">Supreme Brooklyn Box Logo Tee White</p>
+            </div>
           </div>
         </div>
       </div>
@@ -104,12 +229,11 @@
           <button id="B2" type="button" class="btn btn-primary">View all the items</button>
           <br>
           <div class="table-responsive">
-            <table id="example" width="100%" class="table table-bordered"></table>
+            <table id="example" style="width:100%" class="table table-bordered"></table>
           </div>
           <div class="table-responsive">
-            <table id="example5" width="100%" class="table table-bordered"></table>
+            <table id="example5" style="width:100%" class="table table-bordered"></table>
           </div>
-          <div id=chart></div>
         </div>
       </div>
     </div>
@@ -124,7 +248,7 @@
     <div class="container">
       <div class="row d-flex justify-content-between">
         <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">Copyright - Guo Baoyi</p>
+          <p class="mb-0 text-dark">Contact : +852 6449 2826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Copyright - Guo Baoyi</p>
         </div>
         <div class="col-lg-4 col-md-6">
           <p class="mb-0 text-dark">2018 - 11 - 04</p>
@@ -143,6 +267,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.css" rel="stylesheet" type="text/css">
   <script src="popitems.js"></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
