--- a/stores.html
+++ b/stores.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -10,17 +9,14 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-566NHGN');</script>
   <!-- End Google Tag Manager -->
-
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
+  <script> window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-129094912-1');
   </script>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
@@ -32,15 +28,11 @@
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="wireframe.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
-  integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-  crossorigin=""/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="">
   <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
-  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-  crossorigin=""></script>
+  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
   <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js">
@@ -48,12 +40,9 @@
 </head>
 
 <body class="">
-
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-
   <nav class="navbar navbar-expand-md navbar-light bg-warning">
     <div class="container">
       <a class="navbar-brand" href="#"><i class="fa d-inline fa-lg fa-bullseye"></i></a>
@@ -61,53 +50,77 @@
         <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse text-center justify-content-between" id="navbar2SupportedContent">
         <ul class="navbar-nav">
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="index.html">Home</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="landing.html">Items</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="brands.html">Brands</a>
           </li>
-          <li class="nav-item" style="	text-shadow: 0px 0px 4px black;">
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
             <a class="nav-link mx-2" href="stores.html">Stores</a>
+          </li>
+          <li class="nav-item text-uppercase" style="	text-shadow: 0px 0px 4px black;">
+            <a class="nav-link mx-2" href="contact.html">CONTACT US</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="py-5">
+  <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
+  <div class="py-3">
+    <div class="container">
+      <iframe src="https://uploads.knightlab.com/storymapjs/ab31fff46d594ab5067f939f8f53807d/stores/index.html" frameborder="0" width="100%" height="550"></iframe>
+    </div>
+  </div>
+  <div class="py-3">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <div class="carousel slide" data-ride="carousel" id="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/items-bg.jpg">
-                <div class="carousel-caption">
-                  <h3 class="display-4 bg-primary shadow text-dark"><b>Hottest Stores</b></h3>
-                  <p class="text-danger"><b>Go find your stores.</b></p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/stores-bg.jpg">
-                <div class="carousel-caption">
-                  <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Items</b></h5>
-                  <p class="text-danger"><b>Find your coolest outfits.</b></p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/brands-bg.jpg">
-                <div class="carousel-caption">
-                  <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Brands</b></h5>
-                  <p class="text-danger"><b>Buy before learning.</b></p>
-                </div>
-              </div>
-            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="col-md-12">
+            <h4 class=""><i class="fa fa-angle-double-down"></i>JUICE</h4>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HL6TL_hiDnA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="col-md-12">
+            <h4 class="" contenteditable="true"><i class="fa fa-angle-double-down"></i>POPCORN</h4>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8f6cu7Yhn6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="col-md-12">
+            <h4 class="" contenteditable="true"><i class="fa fa-angle-double-down"></i>EXTENSIVE PUBLICITY</h4>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/I3S3iqomO-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="col-md-12">
+            <h4 class=""><i class="fa fa-angle-double-down"></i>OVERLAB</h4>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/idPAFV9t3PY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
   <div class="text-center my-0 py-3">
     <div class="container">
       <div class="row">
@@ -117,61 +130,61 @@
           <button id="B3" type="button" class="btn btn-success">View as list</button>
           <button id="B1" type="button" class="btn btn-danger">numbers of items</button>
           <button id="B5" type="button" class="btn btn-info">average selling price</button>
-
-          </br>
           <br>
-         <iframe id="airtable-embed3" src="https://airtable.com/embed/shrAWgjsh91KY6rVM?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-         <iframe id="airtable-embed4" style="display: none" src="https://airtable.com/embed/shrpBXHnj5qVvPeSG?backgroundColor=gray&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-       </br>
-                   <br>
-                   <div class="table-responsive">
-                     <table id="example2" width="100%" class="table table-bordered"></table>
-                   </div>
-                   <div id="chart"></div>
-                   <div class="table-responsive">
-                     <table id="example4" width="100%" class="table table-bordered"></table>
-                   </div>
-                   <div id="chart2"></div>
-                    <Br>
-                    </br>
-                    <div id="mapid" style="width: 1100px; height: 440px; border: 1px solid #AAA;"></div>
-                    <br></br>
-                    <button type="button" class="btn btn-success" id='roll_up' onclick="show_stores();">Show Stores</button><br>
-                    <script>
-                       var mapboxTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a>', maxZoom: 18,})
-                       var map = L.map('mapid')
-                            .addLayer(mapboxTiles)
-                            .setView([22.3, 114.2], 13);
-
-                        var items = [];
-                            var airtable_read_endpoint = "https://api.airtable.com/v0/app9lhFw2d0zCNuUL/Stores?api_key=keyzw1peVZWig6wbC&view=Grid%20view";
-                            var data = [];
-                            $.getJSON(airtable_read_endpoint, function(result) {
-                                   $.each(result.records, function(key,value) {
-                                       items = {};
-                                           items["name"] = value.fields.stores_;
-                                           items["url"] = value.fields.url;
-                                           items["pics"] = value.fields.pics;
-                                           items["location"] = value.fields.location;
-                                           items["telephone"] = value.fields.telephone;
-                                           items["business_hours"] = value.fields.business_hours;
-                                           items["n"] = value.fields.n;
-                                           items["e"] = value.fields.e;
-                                           data.push(items);
-                                           console.log(items);
-                                    }); // end .each
-                            }); // end getJSON
-                    </script>
-                    <script>
-                    function show_stores(){
-                      for (var i in data) {
-                          var latlng = L.latLng({ lat: data[i].n, lng: data[i].e });
-                          L.marker( latlng )
-                              .bindPopup( '<a href="' + data[i].url + '" target="_blank">' + '<img src="' + data[i].pics+'" width = "200px"><br>'+data[i].name + '</a>' + "<br><b>" + data[i].location +"</b>" + "<br>" + data[i].business_hours + "</br>" + data[i].telephone)
-                              .addTo(map);
-                      }
-                    }
-                    </script>
+          <br>
+          <iframe id="airtable-embed3" src="https://airtable.com/embed/shrAWgjsh91KY6rVM?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+          <iframe id="airtable-embed4" style="display: none" src="https://airtable.com/embed/shrpBXHnj5qVvPeSG?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533"></iframe>
+          <br>
+          <br>
+          <div class="table-responsive">
+            <table id="example2" style="width:50%" class="table table-bordered"></table>
+          </div>
+          <div id="chart"></div>
+          <div class="table-responsive">
+            <table id="example4" style="width:50%" class="table table-bordered"></table>
+          </div>
+          <div id="chart2"></div>
+          <br>
+          <br>
+          <div id="mapid" style="width: 100%; height: 440px; border: 1px solid #AAA;"></div>
+          <br><br>
+          <button type="button" class="btn btn-success" id="roll_up" onclick="show_stores();">Show Stores</button><br>
+          <script>
+            var mapboxTiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+              attribution: 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a>',
+              maxZoom: 18,
+            })
+            var map = L.map('mapid').addLayer(mapboxTiles).setView([22.3, 114.2], 13);
+            var items = [];
+            var airtable_read_endpoint = "https://api.airtable.com/v0/app9lhFw2d0zCNuUL/Stores?api_key=keyzw1peVZWig6wbC&view=Grid%20view";
+            var data = [];
+            $.getJSON(airtable_read_endpoint, function(result) {
+              $.each(result.records, function(key, value) {
+                items = {};
+                items["name"] = value.fields.stores_;
+                items["url"] = value.fields.url;
+                items["pics"] = value.fields.pics;
+                items["location"] = value.fields.location;
+                items["telephone"] = value.fields.telephone;
+                items["business_hours"] = value.fields.business_hours;
+                items["n"] = value.fields.n;
+                items["e"] = value.fields.e;
+                data.push(items);
+                console.log(items);
+              }); // end .each
+            }); // end getJSON
+          </script>
+          <script>
+            function show_stores() {
+              for (var i in data) {
+                var latlng = L.latLng({
+                  lat: data[i].n,
+                  lng: data[i].e
+                });
+                L.marker(latlng).bindPopup('<a href="' + data[i].url + '" target="_blank">' + '<img src="' + data[i].pics + '" width = "200px"><br>' + data[i].name + '</a>' + "<br><b>" + data[i].location + "</b>" + "<br>" + data[i].business_hours + "</br>" + data[i].telephone).addTo(map);
+              }
+            }
+          </script>
         </div>
       </div>
     </div>
@@ -186,7 +199,7 @@
     <div class="container">
       <div class="row d-flex justify-content-between">
         <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">Copyright - Guo Baoyi</p>
+          <p class="mb-0 text-dark" contenteditable="true">Contact : +852 6449 2826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Copyright - Guo Baoyi</p>
         </div>
         <div class="col-lg-4 col-md-6">
           <p class="mb-0 text-dark">2018 - 11 - 04</p>
@@ -204,17 +217,15 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.1.29/c3.css" rel="stylesheet" type="text/css">
-
   <script>
-   $(document).ready(function(){
-     $('#B3').on('click',function(){
-       $('#airtable-embed4').toggle();
-     });
-   });
-
-</script>
-<script src="popitems.js"></script>
-
+    $(document).ready(function() {
+      $('#B3').on('click', function() {
+        $('#airtable-embed4').toggle();
+      });
+    });
+  </script>
+  <script src="popitems.js"></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
