--- a/brands.html
+++ b/brands.html
@@ -69,14 +69,66 @@
       </div>
     </div>
   </div>
+  <div class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="mb-3 justify-content-center"><b>Latest News</b></h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 p-4">
+          <h4> <b>Every Supreme Skate Deck &amp; Accessory Ever Made Showcased in New Exhibition</b> </h4>
+          <p>“Inferno” centers around two massive collections.</p>
+          <p>Sep 12, 2018/By Nicolaus Li</p>
+        </div>
+        <div class="col-md-6 p-4">
+          <h4> <b>Koreatown Run Club Taps PLEASURES, Chinatown Market &amp; Carrots to Capture the Energy of LA</b> </h4>
+          <p>Building a new sense of community.</p>
+          <p>Nov 28, 2018/By Jake Silbert</p>
+        </div>
+        <div class="col-md-6 p-4">
+          <h4> <b>Champion &amp; London Youth Reveal New Charity Capsule</b> </h4>
+          <p>Celebrating young Londoners.</p>
+          <p>Nov 26, 2018/By Jack Stanley</p>
+        </div>
+        <div class="col-md-6 p-4">
+          <h4> <b>Anti Social Social Club Joins Honda for Ricer-Friendly Collaboration</b> </h4>
+          <p>No VTEC logos to be found, however.</p>
+          <p>Nov 2, 2018/By Jake Silbert</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 p-4">
+          <h4> <b>Palace x Polo Ralph Lauren's London Drop Had Fans Excited for Skate Decks & Teddy Bears</b> </h4>
+          <p>The unexpected collaboration finally hits stores.</p>
+          <p>Nov 9, 2018/By Jack Stanley</p>
+        </div>
+        <div class="col-md-6 p-4">
+          <h4> <b>Uhh! LRG & Master P Hook-Up for a No Limit Records Capsule</b> </h4>
+          <p>“If you’re sellin’ that ice cream, you gots to make sure it’s good.”</p>
+          <p>14 Hrs ago/Presented by LRG</p>
+        </div>
+        <div class="col-md-6 p-4">
+          <h4> <b>Take a First Look at Martine Rose's Nike Collaboration</b> </h4>
+          <p>Dropping on Craigslist.</p>
+          <p>16 Hrs ago/By Enrique Menendez</p>
+        </div>
+        <div class="col-md-6 p-4">
+          <h4> <b>The North Face, visvim, Cav Empt & More Appear on HAVEN's FW18 Editorial</b> </h4>
+          <p>Alongside Kapital, Mountain Research and more.</p>
+          <p>Nov 30, 2018/By Felson Sajonas</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
   <div class="text-center my-0 py-3">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h1 class="mb-3"><b>Learn before you buy it</b></h1>
+        <div class="col-md-12" style="">
           <br>
-            <iframe class="airtable-embed" src="https://airtable.com/embed/shrybRPv7UzAmYTN9?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="70%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+          <iframe class="airtable-embed" src="https://airtable.com/embed/shrybRPv7UzAmYTN9?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="70%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
           <br>
           <div class="row"></div><button id="B4" type="button" class="btn btn-success" contenteditable="true"><b>Average Selling Price</b></button>
           <br>
@@ -84,7 +136,7 @@
           <div class="table-responsive">
             <table id="example3" style="width:50%" class="table table-bordered"></table>
           </div>
-          <div id="chart">
+          <div id="chart" style="width:50%">
           </div>
         </div>
       </div>
