--- a/brands.html
+++ b/brands.html
@@ -136,7 +136,7 @@
           <div class="table-responsive">
             <table id="example3" style="width:50%" class="table table-bordered"></table>
           </div>
-          <div id="chart" style="width:50%">
+          <div id="chart">
           </div>
         </div>
       </div>
