--- a/brands.html
+++ b/brands.html
@@ -100,12 +100,12 @@
       </div>
       <div class="row">
         <div class="col-md-6 p-4">
-          <h4> <b>Palace x Polo Ralph Lauren's London Drop Had Fans Excited for Skate Decks & Teddy Bears</b> </h4>
+          <h4> <b>Palace x Polo Ralph Lauren's London Drop Had Fans Excited for Skate Decks &amp; Teddy Bears</b> </h4>
           <p>The unexpected collaboration finally hits stores.</p>
           <p>Nov 9, 2018 / By Jack Stanley</p>
         </div>
         <div class="col-md-6 p-4">
-          <h4> <b>Uhh! LRG & Master P Hook-Up for a No Limit Records Capsule</b> </h4>
+          <h4> <b>Uhh! LRG &amp; Master P Hook-Up for a No Limit Records Capsule</b> </h4>
           <p>“If you’re sellin’ that ice cream, you gots to make sure it’s good.”</p>
           <p>14 Hrs ago / Presented by LRG</p>
         </div>
@@ -115,7 +115,7 @@
           <p>16 Hrs ago / By Enrique Menendez</p>
         </div>
         <div class="col-md-6 p-4">
-          <h4> <b>The North Face, visvim, Cav Empt & More Appear on HAVEN's FW18 Editorial</b> </h4>
+          <h4> <b>The North Face, visvim, Cav Empt &amp; More Appear on HAVEN's FW18 Editorial</b> </h4>
           <p>Alongside Kapital, Mountain Research and more.</p>
           <p>Nov 30, 2018 / By Felson Sajonas</p>
         </div>
@@ -127,9 +127,6 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12" style="">
-          <br>
-          <iframe class="airtable-embed" src="https://airtable.com/embed/shrybRPv7UzAmYTN9?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="70%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-          <br>
           <div class="row"></div><button id="B4" type="button" class="btn btn-success" contenteditable="true"><b>Average Selling Price</b></button>
           <br>
           <br>
@@ -150,12 +147,17 @@
   </div>
   <div class="py-3 bg-warning">
     <div class="container">
-      <div class="row d-flex justify-content-between">
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">Contact : +852 6449 2826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Copyright - Guo Baoyi</p>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">2018 - 11 - 04</p>
+      <div class="row">
+        <div class="col-md-12 text-center d-md-flex justify-content-between align-items-center">
+          <ul class="nav d-flex justify-content-center">
+            <li class="nav-item text-dark shadow-none" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link active" href="index.html">HOME</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="landing.html">ITEMS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="brands.html">BRANDS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="stores.html">STORES</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="contact.html">CONTACT US</a> </li>
+          </ul>
+          <p class="mb-0 py-1">Contact : +852 6449 2826</p>
+          <p class="mb-0 py-1">© 2014-2018 Pingendo. All rights reserved</p>
         </div>
       </div>
     </div>
