--- a/contact.html
+++ b/contact.html
@@ -77,19 +77,19 @@
         <div class="col-md-12">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/home-bg.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/about-bg.jpg">
                 <div class="carousel-caption">
                   <h3 class="display-4 shadow text-dark bg-light"><b>Hottest Items</b></h3>
                   <p class="text-warning"><b>Find your coolest outfits.</b></p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/about-bg.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/contact-bg.jpg">
                 <div class="carousel-caption">
                   <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Stores</b></h5>
                   <p class="text-warning"><b>Go find your stores.</b></p>
                 </div>
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/contact-bg.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/home-bg.jpg">
                 <div class="carousel-caption">
                   <h5 class="display-4 bg-primary shadow text-dark"><b>Hottest Brands</b></h5>
                   <p class="text-warning"><b>Buy before learning.</b></p>
@@ -116,9 +116,7 @@
       <div class="row">
         <div class="mx-auto col-md-7">
           <hr>
-          <p>The website is still in building process...<br>
-            Please leave your comment and contact below if you're free. What you feel and think means a lot to us!
-            <br>Let's make the page better!</p>
+          <p>The website is still in building process...<br> Please leave your comment and contact below if you're free. What you feel and think means a lot to us! <br>Let's make the page better!</p>
           <hr>
         </div>
       </div>
@@ -161,12 +159,17 @@
   </div>
   <div class="py-3 bg-warning">
     <div class="container">
-      <div class="row d-flex justify-content-between">
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark" contenteditable="true">Contact : +852 64492826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Copyright - Guo Baoyi</p>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">2018 - 11 - 04</p>
+      <div class="row">
+        <div class="col-md-12 text-center d-md-flex justify-content-between align-items-center">
+          <ul class="nav d-flex justify-content-center">
+            <li class="nav-item text-dark shadow-none" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link active" href="index.html">HOME</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="landing.html">ITEMS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="brands.html">BRANDS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="stores.html">STORES</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="contact.html">CONTACT US</a> </li>
+          </ul>
+          <p class="mb-0 py-1">Contact : +852 6449 2826</p>
+          <p class="mb-0 py-1">© 2014-2018 Pingendo. All rights reserved</p>
         </div>
       </div>
     </div>
