--- a/index.html
+++ b/index.html
@@ -128,21 +128,26 @@
       </div>
     </div>
   </div>
-  <div class="bg-info p-0">
+  <div class="py-3 bg-warning">
     <div class="container">
       <div class="row">
+        <div class="col-md-12 text-center d-md-flex justify-content-between align-items-center">
+          <ul class="nav d-flex justify-content-center">
+            <li class="nav-item text-dark shadow-none" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link active" href="index.html">HOME</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="landing.html">ITEMS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="brands.html">BRANDS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="stores.html">STORES</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="contact.html">CONTACT US</a> </li>
+          </ul>
+          <p class="mb-0 py-1">Contact : +852 6449 2826</p>
+          <p class="mb-0 py-1">© 2014-2018 Pingendo. All rights reserved</p>
+        </div>
       </div>
     </div>
   </div>
-  <div class="py-3 bg-warning">
+  <div class="bg-info p-0">
     <div class="container">
-      <div class="row d-flex justify-content-between">
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark" contenteditable="true">Contact : +852 64492826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Copyright - Guo Baoyi</p>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">2018 - 11 - 04</p>
-        </div>
+      <div class="row">
       </div>
     </div>
   </div>
