--- a/stores.html
+++ b/stores.html
@@ -99,7 +99,7 @@
             <h4 class="" contenteditable="true"><i class="fa fa-angle-double-down"></i>POPCORN</h4>
           </div>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/8f6cu7Yhn6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8f6cu7Yhn6g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
           </div>
         </div>
         <div class="col-md-3">
@@ -107,7 +107,7 @@
             <h4 class="" contenteditable="true"><i class="fa fa-angle-double-down"></i>EXTENSIVE PUBLICITY</h4>
           </div>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/I3S3iqomO-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/I3S3iqomO-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
           </div>
         </div>
         <div class="col-md-3">
@@ -115,7 +115,7 @@
             <h4 class=""><i class="fa fa-angle-double-down"></i>OVERLAB</h4>
           </div>
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/idPAFV9t3PY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/idPAFV9t3PY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
           </div>
         </div>
       </div>
@@ -197,12 +197,17 @@
   </div>
   <div class="py-3 bg-warning">
     <div class="container">
-      <div class="row d-flex justify-content-between">
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark" contenteditable="true">Contact : +852 6449 2826&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Copyright - Guo Baoyi</p>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <p class="mb-0 text-dark">2018 - 11 - 04</p>
+      <div class="row">
+        <div class="col-md-12 text-center d-md-flex justify-content-between align-items-center">
+          <ul class="nav d-flex justify-content-center">
+            <li class="nav-item text-dark shadow-none" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link active" href="index.html">HOME</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="landing.html">ITEMS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="brands.html">BRANDS</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="stores.html">STORES</a> </li>
+            <li class="nav-item" style="	text-shadow: 0px 0px 4px black;"> <a class="nav-link" href="contact.html">CONTACT US</a> </li>
+          </ul>
+          <p class="mb-0 py-1">Contact : +852 6449 2826</p>
+          <p class="mb-0 py-1">© 2014-2018 Pingendo. All rights reserved</p>
         </div>
       </div>
     </div>
